--- a/Views/invoiceData/addInvoiceDetails.cshtml
+++ b/Views/invoiceData/addInvoiceDetails.cshtml
@@ -5,17 +5,17 @@
     <input type="text" value="@Model.headerId" name="headerId" class="form-control" hidden>
   <div class="form-group">
     <label >Item Name</label>
-    <input type="text" class="form-control" asp-for="ItemName">
+    <input type="text" required class="form-control" asp-for="ItemName">
     
   </div>
   <div class="form-group">
     <label >Item Count</label>
-    <input type="text" class="form-control" asp-for="ItemCount">
+    <input type="text" required class="form-control" asp-for="ItemCount">
     
   </div>
   <div class="form-group">
     <label >Item Price</label>
-    <input type="text" class="form-control" asp-for="ItemPrice">
+    <input type="text" required class="form-control" asp-for="ItemPrice">
     
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
