--- a/Views/invoiceData/addInvoiceDetails.cshtml
+++ b/Views/invoiceData/addInvoiceDetails.cshtml
@@ -10,12 +10,12 @@
   </div>
   <div class="form-group">
     <label >Item Count</label>
-    <input type="text" required class="form-control" asp-for="ItemCount">
+    <input type="number" required class="form-control" asp-for="ItemCount">
     
   </div>
   <div class="form-group">
     <label >Item Price</label>
-    <input type="text" required class="form-control" asp-for="ItemPrice">
+    <input type="number" required class="form-control" asp-for="ItemPrice">
     
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
